--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "nltk>=3.9.1",
     "pdf2image>=1.17.0",
     "python-dotenv>=1.0.1",
+    "scipy>=1.14.1",
     "wordcloud>=1.9.4",
 ]
 
