--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,11 +11,20 @@ dependencies = [
     "ipywidgets>=8.1.5",
     "matplotlib>=3.9.2",
     "nltk>=3.9.1",
+    "openai>=1.57.3",
     "pdf2image>=1.17.0",
+    "pypdf>=5.1.0",
     "python-dotenv>=1.0.1",
+    "scikit-learn>=1.6.0",
     "scipy>=1.14.1",
+    "seaborn>=0.13.2",
+    "starcc>=0.0.5",
+    "utils",
     "wordcloud>=1.9.4",
 ]
 
 [tool.uv.workspace]
 members = ["utils"]
+
+[tool.uv.sources]
+utils = { workspace = true }
