--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "process"
 version = "0.1.0"
 description = "Ainu corpora processing tools"
 readme = "README.md"
-requires-python = ">=3.11"
+requires-python = ">=3.12"
 dependencies = [
     "ainconv>=0.6.0",
     "datasets>=2.16.1",
@@ -12,6 +12,7 @@ dependencies = [
     "matplotlib>=3.9.2",
     "nltk>=3.9.1",
     "openai>=1.57.3",
+    "parsel>=1.9.1",
     "pdf2image>=1.17.0",
     "pypdf>=5.1.0",
     "python-dotenv>=1.0.1",
@@ -20,7 +21,7 @@ dependencies = [
     "seaborn>=0.13.2",
     "starcc>=0.0.5",
     "utils",
-    "wiktionary",
+    "wiktionary-dump-extractor",
     "wordcloud>=1.9.4",
 ]
 
@@ -29,4 +30,4 @@ members = ["utils"]
 
 [tool.uv.sources]
 utils = { workspace = true }
-wiktionary = { path = "wiktionary" }
+wiktionary-dump-extractor = { path = "wiktionary-dump-extractor" }
