--- a/wiktionary-dump-extractor/Cargo.toml
+++ b/wiktionary-dump-extractor/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "wiktionary"
+name = "wiktionary_dump_extractor"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [lib]
-name = "wiktionary"
+name = "wiktionary_dump_extractor"
 crate-type = ["cdylib"]
 
 [dependencies]
