--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "starcc>=0.0.5",
     "utils",
     "wiktionary-dump-extractor",
+    "wiktionary",
     "wordcloud>=1.9.4",
 ]
 
@@ -31,3 +32,4 @@ members = ["utils"]
 [tool.uv.sources]
 utils = { workspace = true }
 wiktionary-dump-extractor = { path = "wiktionary-dump-extractor" }
+wiktionary = { git = "https://github.com/mkpoli/wiktionary-ja.git", subdirectory = "packages/wiktionary", rev = "b7e4dd82a083baefd5614d7569745c2e71834981" }
